# udp-client-server

./: .clang-format  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
commons/include/: UDPSocket.hpp
server/: CMakeLists.txt
server/include/: UDPServer.hpp
server/src/: ResourceManager.hpp  SocketMessage.hpp  UDPServer.cpp  UDPSocket.hpp  WorkerManager.cpp  WorkerManager.hpp  main.cpp
